...
        hour = "05", temperature = -3, weatherStatus = WeatherStatus.SNOWY,
    )
)

val mockWeatherData = WeatherData(
    cityName = "Istanbul",
    "Cloudy",
    forecast = mockForecastData,
    temperature = 8,
    temperatureMax = 12,
    temperatureMin = 0,
    uvIndex = UVIndex(
        indexPoint = 0, status = "Low\nFor rest of the day"
    ),
    rainfallForecast = RainfallForecast(
        index = "0 mm",
        description = "In the last 24 hours\nNo rain is expected in the next 10 days."
    ),
    feltTemperature = FeltTemperature(
        degree = 2, description = "The wind feels colder"
    ),
    forecastHours = mockForecastHours,
    viewingDistance = ViewingDistance(
        visibleDistance = "25 km", description = "It's clear now"
    )
)
...
