...
        Text(
            text = weatherData.description,
            modifier = Modifier
                .fillMaxWidth()
                .wrapContentHeight()
                .alpha(descriptionAlphaAnimation)
                .testTag("ExpandedDescriptionText"),
            textAlign = TextAlign.Center,
            fontSize = dimensionResource(id = R.dimen.large_text).value.sp
        )

        Text(
            text = stringResource(
...
